msa/deployment_orders.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: orders-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-app
  template:
    metadata:
      labels:
        app: orders-app
    spec:
      containers:
      - name: orders-app
        image: 192.168.0.8:5000/orders-service:2.0
        ports:
        - containerPort: 50002
        imagePullPolicy: Always
