msa/service_catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-app-service
spec:
  ports:
    - name: "50003"
      port: 50003
      targetPort: 50003
  selector:
    app: catalog-app
  type: NodePort
