msa/service_orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-app-service
spec:
  ports:
    - name: "50002"
      port: 50002
      targetPort: 50002
  selector:
    app: orders-app
  type: NodePort
