msa/service_users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-app-service
spec:
  ports:
    - name: "50001"
      port: 50001 
      targetPort: 50001
  selector:
    app: users-app
  type: NodePort
