msa/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress 
metadata: 
    name: nginx-ingress-sample 
    #annotations:
    #    nginx.ingress.kubernetes.io/use-regex: "true"
spec: 
    rules: 
    - http: 
        paths: 
        - path: /users-ms
          backend: 
            serviceName: users-app-service
            servicePort: 50001
        - path: /orders-ms
          backend:
            serviceName: orders-app-service
            servicePort: 50002
